# build_environment

./: .gitignore  .gitmodules  CMakeLists.txt  DoxyFileApi  Doxyfile  README.md  README.txt  SConstruct
cmake/: DisabledFindBoost.cmake  FindBoost.cmake  FindCLAPACK.cmake  FindFreeglut.cmake  FindMSGPACK.cmake  FindOpenCL.cmake  FindOpenCV.cmake  FindPTHREAD.cmake  FindTBB.cmake  FindutCore.cmake  UbiTrackApp.cmake  UbiTrackCSharpCompiler.cmake.in  UbiTrackCSharpHelpers.cmake  UbiTrackComponent.cmake  UbiTrackConfig.cmake  UbiTrackDetectAndroidSDK.cmake  UbiTrackDetectApacheAnt.cmake  UbiTrackDetectCUDA.cmake  UbiTrackDetectCXXCompiler.cmake  UbiTrackDetectTBB.cmake  UbiTrackDetermineCSharpCompiler.cmake  UbiTrackExtraTargets.cmake  UbiTrackFindConanLibraries.cmake  UbiTrackFindCoreLibraries.cmake  UbiTrackFindSystemLibraries.cmake  UbiTrackGenAndroidMK.cmake  UbiTrackMinDepVersions.cmake  UbiTrackModule.cmake  UbiTrackUtils.cmake  UbitrackPackaging.cmake  dtrace.cmake  etw.cmake
cmake/checks/: UbiTrackDetectCudaArch.cu
config/: SConsUtils  UbiLinuxAndroidEnvSetup  UbiLinuxEnvSetup  UbiMSVCEnvSetup  UbiMacOSEnvSetup  buildUtils  libraryConfig.py
config/libraryFinder/: AbstractLibraryFinder.py  LibraryFinderChain.py  LinuxLibraryFinder.py  MacOSHomebrewLibraryFinder.py  UbitrackLibraryFinder.py  WindowsLibraryFinder.py
misc/installer/Windows/: UbitrackInstaller.iss  trackmanConfig.iss
misc/setup/linux/: addStandardModules.sh  addStandardModules.sh~
misc/setup/osx/: addStandartModules.sh
misc/setup/windows/: addNarvisModules.bat  addStandardModules.bat  fetch_packages.ps1
misc/tracing/etw/: parse_evenqueue_tracelog.py  ubitrack_etw_providers.man.base
misc/tracing/lttng/: LTTNG-EvaluateVideoLatency.py  collect_2min_trace.sh
modules/: CMakeLists.txt
modules/utcore/src/utMath/: Quaternion.h
